@@ -20,6 +20,9 @@ partman-base (129) UNRELEASED; urgency=low
       hardcoding of ext3 from elsewhere in partman, and make the default
       filesystem preseedable.
     - Check dmraid's exit code rather than parsing its output.
+    - Don't display the Back button when asking for confirmation, since it's
+      already a boolean "do you want to continue?" question and we ignore
+      backup anyway (LP: #9244).
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 26 Dec 2008 14:11:37 +0000
 
